redis/k8s/02.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-app
spec:
  selector:
    matchLabels:
      app: redis-app
      app.kubernetes.io/name: redis-app
  template:
    metadata:
      labels:
        app: redis-app
        app.kubernetes.io/name: redis-app
    spec:
      containers:
      - name: redis-app
        image: ghcr.io/bzhtux/sample_apps-redis:v0.0.2
