redis/k8s/03.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-app
spec:
  ports:
  - name: redis-app
    port: 8080
    targetPort: 8080
  selector:
    app: redis-app
    app.kubernetes.io/name: redis-app
  type: LoadBalancer
